<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_bg"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/header"
        style="@style/BaseStyle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/work"
        style="@style/BaseStyle"
        android:layout_below="@id/header"
        android:layout_marginTop="25dp"
        android:text="@string/work"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/timeWork"
        style="@style/BaseStyle"
        android:layout_below="@id/work"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="time"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/rest"
        style="@style/BaseStyle"
        android:layout_below="@id/timeWork"
        android:layout_marginTop="25dp"
        android:text="@string/rest"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/timeRest"
        style="@style/BaseStyle"
        android:layout_below="@id/rest"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="time"
        android:textColor="#FDFDFD" />

    <Button
        android:id="@+id/save"
        style="@style/BaseStyle"
        android:layout_below="@id/timeRest"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:textColor="#FFFFFF" />

</RelativeLayout>